--- a/res/layout/no_spray.xml
+++ b/res/layout/no_spray.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:inputType="number"
                 android:hint="@string/hintNumRooms" >
 
             </EditText>
@@ -56,6 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:inputType="number"
                 android:hint="@string/hintNumShelters" >
 
             </EditText>
