--- a/res/layout/pyrethroid.xml
+++ b/res/layout/pyrethroid.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:inputType="number"
                 android:hint="@string/hintNumRooms" >
 
                 <requestFocus />
@@ -57,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:inputType="number"
                 android:hint="@string/hintNumShelters" >
             </EditText>
         </LinearLayout>
@@ -79,6 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:inputType="number"
                 android:hint="@string/hintNumRooms" >
             </EditText>
         </LinearLayout>
@@ -101,6 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:inputType="number"
                 android:hint="@string/hintNumShelters" >
             </EditText>
         </LinearLayout>
