--- a/res/layout/scan_rfid.xml
+++ b/res/layout/scan_rfid.xml
@@ -15,6 +15,7 @@
         android:id="@+id/scan_rfid_instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
