--- a/res/layout/gps_location.xml
+++ b/res/layout/gps_location.xml
@@ -18,12 +18,13 @@
 
     <TextView
         android:id="@+id/gps_location_textview_contents"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/location_found"
-        android:textSize="28sp" />
+        android:textSize="40sp" />
 
     <LinearLayout
         android:id="@+id/gps_location_layout_innerLinearLayout"
@@ -36,6 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
+            android:textSize="28sp"
             android:text="@string/back" />
 
         <Button
@@ -43,6 +45,7 @@
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
+            android:textSize="28sp"
             android:text="@string/confirm" />
     </LinearLayout>
 
