--- a/res/layout/no_spray.xml
+++ b/res/layout/no_spray.xml
@@ -15,6 +15,16 @@
         android:layout_alignParentTop="true"
         android:orientation="vertical" >
 
+        <TextView
+            android:id="@+id/no_spray_textview_title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="@string/confirmUnsprayed"
+            android:textSize="28sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,6 +87,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
+            android:textSize="28sp" 
             android:text="@string/back" />
 
         <Button
@@ -84,6 +95,7 @@
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
+            android:textSize="28sp" 
             android:text="@string/confirm" />
     </LinearLayout>
 
