--- a/res/layout/no_spray.xml
+++ b/res/layout/no_spray.xml
@@ -21,13 +21,17 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
             android:text="@string/confirmUnsprayed"
-            android:textSize="28sp" />
+            android:textSize="36sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="20dp"
             android:orientation="horizontal" >
 
             <TextView
@@ -36,23 +40,25 @@
                 android:layout_height="wrap_content"
                 android:text="@string/roomsUnsprayed"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="28sp" />
+                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/no_spray_edittext_roomsUnsprayedValue"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="@string/hintNumRooms"
                 android:inputType="number"
-                android:textSize="28sp" >
+                android:textSize="24sp" >
             </EditText>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:orientation="horizontal" >
 
             <TextView
@@ -61,17 +67,17 @@
                 android:layout_height="wrap_content"
                 android:text="@string/sheltersUnsprayed"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="28sp" />
+                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/no_spray_edittext_sheltersUnsprayedValue"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="@string/hintNumShelters"
                 android:inputType="number"
-                android:textSize="28sp" >
+                android:textSize="24sp" >
             </EditText>
         </LinearLayout>
     </LinearLayout>
@@ -87,16 +93,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:textSize="28sp" 
-            android:text="@string/back" />
+            android:text="@string/back"
+            android:textSize="28sp" />
 
         <Button
             android:id="@+id/no_spray_button_confirmButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:textSize="28sp" 
-            android:text="@string/confirm" />
+            android:text="@string/confirm"
+            android:textSize="28sp" />
     </LinearLayout>
 
 </RelativeLayout>
