--- a/res/layout/confirm_ddt.xml
+++ b/res/layout/confirm_ddt.xml
@@ -45,7 +45,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="18dp"
-        android:text="@string/placeholder"
+        android:text="@string/sprayerName"
         android:textSize="28sp" />
 
 </RelativeLayout>
