--- a/res/layout/confirm_pyrethroid.xml
+++ b/res/layout/confirm_pyrethroid.xml
@@ -22,7 +22,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="160dp"
-        android:text="@string/placeholder"
+        android:text="@string/sprayerName"
         android:textSize="28sp" />
 
     <LinearLayout
