--- a/res/layout/sprayer_form.xml
+++ b/res/layout/sprayer_form.xml
@@ -13,6 +13,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical" >
+        
+        <TextView
+            android:id="@+id/sprayer_form_textview_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:gravity="center"
+            android:text="Sprayed by"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="28sp" />
 
         <TextView
             android:id="@+id/sprayer_form_textview_sprayerName"
@@ -20,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:gravity="center"
-            android:text="@string/placeholder"
+            android:text="@string/sprayerName"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="28sp" />
 
@@ -28,6 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:orientation="horizontal" >
 
             <TextView
@@ -36,17 +48,17 @@
                 android:layout_height="wrap_content"
                 android:text="@string/roomsSprayed"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="28sp" />
+                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/sprayer_form_edittext_roomsSprayedValue"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginLeft="6dp"
                 android:ems="10"
-                android:hint="@string/hintNumRooms"
                 android:inputType="number"
-                android:textSize="28sp" >
+                android:textSize="24sp" >
 
                 <requestFocus />
             </EditText>
@@ -56,6 +68,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:orientation="horizontal" >
 
             <TextView
@@ -64,17 +78,17 @@
                 android:layout_height="wrap_content"
                 android:text="@string/sheltersSprayed"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="28sp" />
+                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/sprayer_form_edittext_sheltersSprayedValue"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginLeft="6dp"
                 android:ems="10"
-                android:hint="@string/hintNumShelters"
                 android:inputType="number"
-                android:textSize="28sp" >
+                android:textSize="24sp" >
             </EditText>
         </LinearLayout>
 
@@ -88,9 +102,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
                 android:text="@string/canRefilled"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="28sp" />
+                android:textSize="24sp" />
 
             <RadioGroup
                 android:id="@+id/sprayer_form_radiogroup"
