--- a/res/layout/sprayer_form.xml
+++ b/res/layout/sprayer_form.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:gravity="center"
-            android:text="Sprayed by"
+            android:text="@string/sprayHeader"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="28sp" />
 
