--- a/res/layout/confirm_ddt.xml
+++ b/res/layout/confirm_ddt.xml
@@ -33,8 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
+        android:layout_marginTop="12dp"
         android:text="@string/confirmDDT"
         android:textSize="28sp" />
 
@@ -42,9 +42,9 @@
         android:id="@+id/confirm_ddt_table"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/confirm_ddt_textview_title"
         android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_below="@+id/confirm_ddt_textview_title" >
+        android:layout_marginRight="6dp" >
 
         <TableRow
             android:id="@+id/confirm_ddt_foreman_row"
@@ -124,6 +124,27 @@
 
             <TextView
                 android:id="@+id/confirm_ddt_shelters_sprayed_value"
+                android:layout_width="0dp"
+                android:layout_weight="0.3"
+                android:text=" ? "
+                android:textSize="24sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/confirm_ddt_can_refilled_row"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp" >
+
+            <TextView
+                android:id="@+id/confirm_ddt_can_refilled_label"
+                android:layout_width="0dp"
+                android:layout_weight="0.7"
+                android:text="Refill can"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/confirm_ddt_can_refilled_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
                 android:text=" ? "
