--- a/res/layout/confirm_pyrethroid.xml
+++ b/res/layout/confirm_pyrethroid.xml
@@ -107,6 +107,27 @@
                 android:text=" ? "
                 android:textSize="24sp" />
         </TableRow>
+        
+        <TableRow
+            android:id="@+id/confirm_pyrethroid_can_refilled_row"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp" >
+
+            <TextView
+                android:id="@+id/confirm_pyrethroid_can_refilled_label"
+                android:layout_width="0dp"
+                android:layout_weight="0.7"
+                android:text="Refill can"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/confirm_pyrethroid_can_refilled_value"
+                android:layout_width="0dp"
+                android:layout_weight="0.3"
+                android:text=" ? "
+                android:textSize="24sp" />
+        </TableRow>
     </TableLayout>
 
     <LinearLayout
