--- a/res/layout/finished.xml
+++ b/res/layout/finished.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/finished_foreman_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="24sp" />
         </TableRow>
 
@@ -62,7 +62,7 @@
                 android:id="@+id/finished_sprayer_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="24sp" />
         </TableRow>
         
@@ -83,7 +83,7 @@
                 android:id="@+id/finished_rooms_sprayed_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="16sp" />
         </TableRow>
 
@@ -104,7 +104,7 @@
                 android:id="@+id/finished_shelters_sprayed_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="16sp" />
         </TableRow>
         
@@ -125,7 +125,7 @@
                 android:id="@+id/finished_can_refilled_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="16sp" />
         </TableRow>
         
@@ -146,7 +146,7 @@
                 android:id="@+id/finished_sprayer2_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="24sp" />
         </TableRow>
 
@@ -167,7 +167,7 @@
                 android:id="@+id/finished_rooms_sprayed2_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="16sp" />
         </TableRow>
 
@@ -188,7 +188,7 @@
                 android:id="@+id/finished_shelters_sprayed2_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="16sp" />
         </TableRow>
         
@@ -209,7 +209,7 @@
                 android:id="@+id/finished_can_refilled2_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="16sp" />
         </TableRow>
 
@@ -230,7 +230,7 @@
                 android:id="@+id/finished_latitude_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="24sp" />
         </TableRow>
 
@@ -251,7 +251,7 @@
                 android:id="@+id/finished_longitude_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="24sp" />
         </TableRow>
     </TableLayout>
