cleaning up code, removing unused methods

--- a/res/layout/confirm_unsprayed.xml
+++ b/res/layout/confirm_unsprayed.xml
@@ -33,14 +33,14 @@
                 android:id="@+id/confirm_unsprayed_rooms_unsprayed_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Rooms Unsprayed"
+                android:text="@string/roomsUnsprayed"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/confirm_unsprayed_rooms_unsprayed_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="24sp" />
         </TableRow>
 
@@ -54,14 +54,14 @@
                 android:id="@+id/confirm_unsprayed_shelters_unsprayed_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Shelters Unsprayed"
+                android:text="@string/sheltersUnsprayed"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/confirm_unsprayed_shelters_unsprayed_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text=""
                 android:textSize="24sp" />
         </TableRow>
     </TableLayout>
