--- a/res/layout/finished.xml
+++ b/res/layout/finished.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/finished_foreman_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Foreman"
+                android:text="@string/foreman"
                 android:textSize="24sp" />
 
             <TextView
@@ -55,7 +55,7 @@
                 android:id="@+id/finished_sprayer_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Sprayer"
+                android:text="@string/sprayer"
                 android:textSize="24sp" />
 
             <TextView
@@ -139,7 +139,7 @@
                 android:id="@+id/finished_sprayer2_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Sprayer 2"
+                android:text="@string/sprayer2"
                 android:textSize="24sp" />
 
             <TextView
@@ -223,7 +223,7 @@
                 android:id="@+id/finished_latitude_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Latitude"
+                android:text="@string/latitude"
                 android:textSize="24sp" />
 
             <TextView
@@ -244,7 +244,7 @@
                 android:id="@+id/finished_longitude_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Longitude"
+                android:text="@string/longitude"
                 android:textSize="24sp" />
 
             <TextView
