--- a/res/layout/no_spray.xml
+++ b/res/layout/no_spray.xml
@@ -1,108 +1,52 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:screenOrientation="portrait"
-    tools:context=".MSpray" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:screenOrientation="portrait" >
 
-    <LinearLayout
-        android:id="@+id/no_spray_layout_mainLayout"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/confirm_no_spray_textview_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:orientation="vertical" >
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/NoSprayHeader"
+        android:textSize="28sp" />
 
-        <TextView
-            android:id="@+id/no_spray_textview_title"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="30dp"
-            android:gravity="center"
-            android:text="@string/confirmUnsprayed"
-            android:textSize="36sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/no_spray_textview_roomsUnsprayed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/roomsUnsprayed"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/no_spray_edittext_roomsUnsprayedValue"
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="number"
-                android:textSize="24sp" >
-            </EditText>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/no_spray_textview_sheltersUnsprayed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/sheltersUnsprayed"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/no_spray_edittext_sheltersUnsprayedValue"
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="number"
-                android:textSize="24sp" >
-            </EditText>
-        </LinearLayout>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/confirm_no_spray_textview_contents"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="160dp"
+        android:text="@string/sprayerName"
+        android:textSize="28sp" />
 
     <LinearLayout
-        android:id="@+id/no_spray_layout_innerLinearLayout"
+        android:id="@+id/confirm_no_spray_layout_innerLinearLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
 
         <Button
-            android:id="@+id/no_spray_button_backButton"
+            android:id="@+id/confirm_no_spray_button_backButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:text="@string/back"
-            android:textSize="28sp" />
+            android:textSize="28sp"
+            android:text="@string/back" />
 
         <Button
-            android:id="@+id/no_spray_button_confirmButton"
+            android:id="@+id/confirm_no_spray_button_confirmButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
+            android:textSize="28sp"
             android:text="@string/confirm"
-            android:textSize="28sp" />
+            android:onClick="getData" />
     </LinearLayout>
 
 </RelativeLayout>
